src/test/deca/syntax/valid/created/lexer/include/include_std.deca
// Description:
//    test de #include valid
//
// Resultats:
//    RAS


#include "Math.decah"
