src/test/deca/syntax/invalid/created/lexer/include/circular/include_circular.deca
// Description:
//    test include avec inclusion circulaire
//
// Resultats:
//    circular_2.decah:1:27: Circular include for file circular_1.decah

#include "circular_1.decah"